Update code after migration to Java 11